--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,11 +27,12 @@ body a { color: black; text-decoration: none; }
     clear: both;}
 .foot_con_imgbox {
     width: 200px;
-    height: 300px;
+    height: 240px;
     margin: 30px;
     line-height: 30px;
     text-align: center;
     border: none;
+    float: left;
    }
 .foot_con_img {
     width: 200px;
@@ -39,6 +40,7 @@ body a { color: black; text-decoration: none; }
     border: none;
    }
 .foot_cont_bq{
+    clear: both;
     width: 100%;
     height: 60px;
     border-top: 1px #eeeeee solid;
