--- a/static/css/style.css
+++ b/static/css/style.css
@@ -143,4 +143,7 @@ body a { color: black; text-decoration: none; }
     height: 400px;
 }
 
+.main_content_zp{width:100%;height: 280px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/ownpic/zp_banner.jpg") center no-repeat; }
+
+
 .title_content {text-indent:2em;}
