--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -5,7 +5,9 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <table class="main_content">
+    <div class="main_content_zp"></div>
+
+    <table class="main_content_zp"></table>
         <tr>
             <td style="margin: 0;"><img src="{% static 'images/ownpic/page2-zipai.jpg' %}"></td>
         </tr>
