--- a/static/css/style.css
+++ b/static/css/style.css
@@ -144,6 +144,15 @@ body a { color: black; text-decoration: none; }
 }
 
 .main_content_zp{width:100%;height: 280px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/ownpic/zp_banner.jpg") center no-repeat; }
-
+.zp_bd{
+    clear: both;
+    margin: 200px auto;
+    border: none;
+}
+.zp_bd_sm{
+    margin: -150px auto;
+    clear: both;
+    color: #666666;
+}
 
 .title_content {text-indent:2em;}
