--- a/static/css/style.css
+++ b/static/css/style.css
@@ -150,9 +150,10 @@ body a { color: black; text-decoration: none; }
     border: none;
 }
 .zp_bd_sm{
-    margin: 10px auto;
+    margin: -50px 0px 80px 0px;
     clear: both;
     color: #666666;
+    font-size: 20px;
 }
 
 .title_content {text-indent:2em;}
