--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,7 +52,7 @@ body a { color: black; text-decoration: none; }
 }
 
 .main_content {margin: 0 auto; clear: both;}
-.main_content_home{ border-top: 3px #9900cc solid; width:100%;height: 600px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/home/home_banner.jpg") center no-repeat; }
+.main_content_home{ border-top: 2px #9900cc solid; width:100%;height: 600px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/home/home_banner.jpg") center no-repeat; }
 .main_content_home_con{width: 80%;height: 100%;margin: 0px auto;background: url("/static/images/home/home_slogn.png") left no-repeat;}
 .head1{font-size: 48px;color: black;line-height: 80px;}
 .head2{font-size: 36px;color: #9900cc;line-height: 80px;}
@@ -143,7 +143,7 @@ body a { color: black; text-decoration: none; }
     height: 400px;
 }
 
-.main_content_zp{width:100%;height: 280px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/ownpic/zp_banner.jpg") center no-repeat; }
+.main_content_zp{border-top: 2px #9900cc solid; width:100%;height: 400px; margin-top: 5px; background-size:100% 100%;  }
 .zp_bd{
     clear: both;
     margin: 50px auto;
