--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@ body {margin:0 auto; padding:0 auto; text-align:center; height: 100%;}
 
 #head_top{width: 80%; height: 65px; margin: 10px auto;}
 
-#logo a{float: left; width:200px; height: 50px; margin-top: 5px;border: none; background: url("/static/images/logo1.jpg")  }
+#logo a{float: left; width:160px; height: 40px; margin-top: 5px;border: none;background-size:160px 40px; background: url("/static/images/logo1.jpg")  }
 #logo a:hover{ background: url("/static/images/logo2.jpg")  }
 
 #navigation ul.menu { float:right; height: 50px; text-align: right;}
