--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,9 @@
 {% load static/images %}
 body {margin:0 auto; padding:0 auto; text-align:center; height: 100%;}
 
-#head_top{width: 80%; height: 65px; margin: 10px auto;}
+#head_top{width: 80%; height: 50px; margin: 10px auto;}
 
-#logo{float: left; width:160px; height: 40px; margin-top: 5px;}
+#logo{float: left; width:160px; height: 40px; }
 #logo img{width:160px; height: 40px;}
 
 
@@ -53,7 +53,7 @@ body a { color: black; text-decoration: none; }
 }
 
 .main_content {margin: 0 auto; clear: both;}
-.main_content_home{ border-top: 2px #9900cc solid; width:100%;height: 600px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/home/home_banner.jpg") center no-repeat; }
+.main_content_home{ border-top: 2px #9900cc solid; width:100%;height: 600px; background-size:100% 100%; background: url("/static/images/home/home_banner.jpg") center no-repeat; }
 .main_content_home_con{width: 80%;height: 100%;margin: 0px auto;background: url("/static/images/home/home_slogn.png") left no-repeat;}
 .head1{font-size: 48px;color: black;line-height: 80px;}
 .head2{font-size: 36px;color: #9900cc;line-height: 80px;}
