--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,7 +61,7 @@ body a { color: black; text-decoration: none; }
 .col{color: #9900cc;}
 .rec{
     float: left;
-    width: 600px;
+    width: 100%;
     height: 100px;
     font-size: 24px;
     color: #9900cc;
@@ -70,7 +70,7 @@ body a { color: black; text-decoration: none; }
 }
 .rec_rig{
     float: right;
-    width: 600px;
+    width: 100%;
     height: 200px;
     font-size: 24px;
     color: #9900cc;
