--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -25,7 +25,7 @@
                 带着心灵去轻松旅行，不必大包小包全副武装<br>
                 你负责发现精彩，我负责备好自拍神器<br>
                 </span>
-            <div class="rec">"旅行对我来说，是恢复青春活力的源泉。——安徒生"</div>
+            <div class="rec">"旅行对我来说，是恢复青春活力的源泉。<br>——安徒生"</div>
          </div>
        </div>
     </div>
@@ -57,7 +57,7 @@
                   自拍神器遍布景点，随手可借还省事<br>
                   微信支付宝扫码即用，方便快捷又简单<br>
                 </span>
-            <div class="rec">"有时候放弃并不是不爱，而是太麻烦而累觉不爱。——网友"</div>
+            <div class="rec">"有时候放弃并不是不爱，而是太麻烦而累觉不爱。<br>——网友"</div>
          </div>
        </div>
     </div>
