--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,6 +31,7 @@ body a { color: black; text-decoration: none; }
     height: 260px;
     margin: 30px;
     line-height: 30px;
+    font-size: 14px;
     text-align: center;
     border: none;
     float: left;
