--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -5,6 +5,7 @@
 {% block title %}关于我们{% endblock %}
 
 {% block content %}
+    <div class="main_content_about"></div>
     <table>
         <tr>
             <td style="margin: 0;"><img src="{% static 'images/about/page3_about.jpg' %}"></td>
