--- a/static/css/style.css
+++ b/static/css/style.css
@@ -157,4 +157,6 @@ body a { color: black; text-decoration: none; }
     color: #666666;
 }
 
+.main_content_about{border-top: 2px #9900cc solid; width:100%;height:20px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/about/about.jpg") center no-repeat; }
+
 .title_content {text-indent:2em;}
