--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 {% load static/images %}
-body {margin:0 auto; padding:0 auto; text-align:center; height: 100%;}
+body {margin:0 auto; padding:0 auto; height: 100%;}
 
 #head_top{width: 80%; height: 50px; margin: 10px auto;}
 
@@ -158,5 +158,5 @@ body a { color: black; text-decoration: none; }
 }
 
 .main_content_about{border-top: 2px #9900cc solid; width:100%;height:480px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/about/about.jpg") center no-repeat; }
-.about_slogn{margin: 0px auto; width: 80%;height: 90%; text-align: center;font-size: 36px;color: white;font-weight: bold;line-height: 480px;}
+.about_slogn{margin: 0px auto; width: 80%;height: 100%; font-size: 36px;color: white;font-weight: bold;line-height: 480px;}
 .title_content {text-indent:2em;}
