--- a/static/css/style.css
+++ b/static/css/style.css
@@ -158,5 +158,4 @@ body a { color: black; text-decoration: none; }
 }
 
 .main_content_about{border-top: 2px #9900cc solid; width:100%;height:480px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/about/about.jpg") center no-repeat; }
-.about_slogn{margin: 0px auto; width: 80%;height: 100%; font-size: 36px;color: white;font-weight: bold;line-height: 480px;padding-left: 50%;}
-.title_content {text-indent:2em;}
+.about_slogn{margin: 0px auto; width: 80%;height: 100%; font-size: 36px;color: white;font-weight: bold;line-height: 460px;}
