--- a/static/css/style.css
+++ b/static/css/style.css
@@ -152,10 +152,10 @@ body a { color: black; text-decoration: none; }
     border: none;
 }
 .zp_bd_sm{
-    margin: -100px 0px 400px 0px;
+    margin: -100px 0 400px 0;
     clear: both;
     color: #666666;
 }
 
 .main_content_about{border-top: 2px #9900cc solid; width:100%;height:480px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/about/about.jpg") center no-repeat; }
-.about_slogn{margin: 0px auto; width: 80%;height: 100%; font-size: 36px;color: white;font-weight: bold;line-height: 460px;}
+.about_slogn{margin: 0 auto; width: 80%;height: 100%; font-size: 36px;color: white;font-weight: bold;line-height: 460px;text-align: center;}
