--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class="main_content_about">
-       <div class="about_slogn">践行共享模式 开创经济轻生活</div>
+       <div class="about_sm">践行共享模式 开创经济轻生活</div>
     </div>
     <table>
         <tr>
