--- a/static/css/style.css
+++ b/static/css/style.css
@@ -158,5 +158,5 @@ body a { color: black; text-decoration: none; }
 }
 
 .main_content_about{border-top: 2px #9900cc solid; width:100%;height:480px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/about/about.jpg") center no-repeat; }
-.about_sm{margin: 0 auto; width: 100%;height: 100%; }
-.about_sm_til{font-size: 36px;color: white;font-weight: bold;line-height: 460px;text-align: center;}
+.about_sm{margin: 0 auto; width: 80%;height: 100%;background-color: coral; }
+.about_sm_til{width: 100%;height: 100%; font-size: 36px;color: white;font-weight: bold;line-height: 460px;text-align: center;}
