--- a/static/css/style.css
+++ b/static/css/style.css
@@ -151,11 +151,13 @@ body a { color: black; text-decoration: none; }
     clear: both;
     margin: 50px auto;
     border: none;
+    text-align: center;
 }
 .zp_bd_sm{
     margin: -100px 0 400px 0;
     clear: both;
     color: #666666;
+    text-align: center;
 }
 
 .main_content_about{border-top: 2px #9900cc solid; width:100%;height:480px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/about/about.jpg") center no-repeat; }
