--- a/static/css/style.css
+++ b/static/css/style.css
@@ -163,4 +163,4 @@ body a { color: black; text-decoration: none; }
 .main_content_about{border-top: 2px #9900cc solid; width:100%;height:480px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/about/about.jpg") center no-repeat; }
 .about_sm{margin: 0 auto; width: 80%;height: 100%; font-size: 40px;color: white;font-weight: bold;line-height: 460px;text-align: center;}
 .about_story_img{width: 60px;height: 60px;margin: 10px auto;}
-.about_story_cont{margin: 10px auto;width: 80%; line-height: 26px;font-size: 14px;}
+.about_story_cont{margin: 10px auto;width: 80%; line-height: 26px;font-size: 14px;border-bottom: solid 1px blanchedalmond;}
