--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -8,7 +8,7 @@
     <div class="main_content_about">
        <div class="about_sm">践行共享新模式 开创经济轻旅行</div>
     </div>
-    <div class="cont_big">
+    <div class="cont_big hig_story">
         <div class="head3">留有遗憾的出游</div>
         <img class="about_story_img" src="{% static 'images/about/sad.png' %}">
         <div class="about_story_cont">
