--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -21,6 +21,18 @@
         </div>
     </div>
     <div class="about_fg"></div>
+    <div class="cont_big hig_story">
+        <div class="head3">我们要做的事</div>
+        <img class="about_story_img" src="{% static 'images/about/jiejue.png' %}">
+        <div class="about_story_cont">
+            方便在景点游玩有拍照欲望，却没有或忘带自拍杆的用户。<br>
+通过手机扫码，便捷的租借共享的方式便捷的用自拍杆，在就近机柜归还自拍杆。<br>
+实现轻装旅行，随时自拍，并解决手机应急充电的问题。<br>
+以景点自拍杆为切入点，横向扩展到其他需要自拍的场景，纵向扩展更多出游装备。
+
+        </div>
+    </div>
+
     <table>
         <tr>
             <td ></td>
