--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -29,7 +29,22 @@
 通过手机扫码，便捷的租借共享的方式便捷的用自拍杆，在就近机柜归还自拍杆。<br>
 实现轻装旅行，随时自拍，并解决手机应急充电的问题。<br>
 以景点自拍杆为切入点，横向扩展到其他需要自拍的场景，纵向扩展更多出游装备。
-
+        </div>
+    </div>
+    <div class="about_fg"></div>
+    <div class="about_jx">
+        <div class="head3">我们的坚信</div>
+        <div class="about_jx_con">
+            <div class="head3">消费升级</div>
+            消费升级和懒人经济的发展，消费者愿意为更好的体验，更便捷的服务买单。无需携带存放，随用随借，随借随还。
+        </div>
+        <div class="about_jx_con">
+            <div class="head3">消费升级</div>
+            消费升级和懒人经济的发展，消费者愿意为更好的体验，更便捷的服务买单。无需携带存放，随用随借，随借随还。
+        </div>
+        <div class="about_jx_con">
+            <div class="head3">消费升级</div>
+            消费升级和懒人经济的发展，消费者愿意为更好的体验，更便捷的服务买单。无需携带存放，随用随借，随借随还。
         </div>
     </div>
 
