--- a/static/css/style.css
+++ b/static/css/style.css
@@ -167,4 +167,4 @@ body a { color: black; text-decoration: none; }
 .about_fg{width: 80%;margin: 0 auto;border-top: dashed 1px #eeeeee;}
 .hig_story{height: 320px;}
 .about_jx{width: 80%;margin: 50px auto;height: 200px;font-size: 14px;line-height: 26px;color: #666666;text-align: center;}
-.about_jx_con{width: 33%;height: 100%;text-align: center;float: left;padding: 30px;}
+.about_jx_con{width: 21%;height: 100%;text-align: center;float: left;padding: 6%;}
