--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,7 +59,8 @@ body a { color: black; text-decoration: none; }
 .head1{font-size: 36px;color: black;line-height: 80px;}
 .head2{font-size: 30px;color: #9900cc;line-height: 60px;}
 .head3{font-size: 24px; color:black;line-height: 60px;}
-.col{color: #9900cc;}
+.head_jx{font-size: 24px; color:black;line-height: 60px;margin-top: 50px;}
+.col{color: #9900cc;font-weight: bold;}
 .rec{
     float: left;
     width: 100%;
@@ -166,6 +167,6 @@ body a { color: black; text-decoration: none; }
 .about_story_cont{margin: 10px auto;width: 80%; line-height: 26px;font-size: 14px;}
 .about_fg{width: 80%;margin: 0 auto;border-top: dashed 1px #eeeeee;}
 .hig_story{height: 320px;}
-.hig_yz{height: 280px;}
+.hig_yz{height: 250px;}
 .about_jx{width: 80%;margin: 50px auto;height: 200px;font-size: 14px;line-height: 26px;color: #666666;text-align: center;}
 .about_jx_con{width: 21%;height: 100%;text-align: center;float: left;padding: 6%;}
