--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,7 +59,7 @@ body a { color: black; text-decoration: none; }
 .head1{font-size: 36px;color: black;line-height: 80px;}
 .head2{font-size: 30px;color: #9900cc;line-height: 60px;}
 .head3{font-size: 24px; color:black;line-height: 60px;}
-.head_jx{font-size: 24px; color:black;line-height: 60px;margin-top: 50px;}
+.head_jx{font-size: 24px; color:black;line-height: 60px; padding-top: 50px;}
 .col{color: #9900cc;font-weight: bold;}
 .rec{
     float: left;
