--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -35,11 +35,11 @@
 
     <div class="about_jx">
         <div class="head_jx">我们的坚信</div>
-        <div class="about_jx_con">
+        <div class="about_jx_con bo_right">
             <div class="col">消费升级</div>
             消费升级和懒人经济的发展，消费者愿意为更好的体验，更便捷的服务买单。无需携带存放，随用随借，随借随还。
         </div>
-        <div class="about_jx_con">
+        <div class="about_jx_con bo_right">
             <div class="col">消费升级</div>
             消费升级和懒人经济的发展，消费者愿意为更好的体验，更便捷的服务买单。无需携带存放，随用随借，随借随还。
         </div>
