--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -31,7 +31,7 @@
 以景点自拍杆为切入点，横向扩展到其他需要自拍的场景，纵向扩展更多出游装备。
         </div>
     </div>
-    <div class="cont_big_gra">
+    <div class="cont_big_gra hig_jx">
 
     <div class="about_jx">
         <div class="head_jx">我们的坚信</div>
