--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,7 +59,7 @@ body a { color: black; text-decoration: none; }
 .head1{font-size: 36px;color: black;line-height: 80px;}
 .head2{font-size: 30px;color: #9900cc;line-height: 60px;}
 .head3{font-size: 24px; color:black;line-height: 60px;}
-.head_jx{font-size: 24px; color:black;line-height: 60px; padding-top: 70px;}
+.head_jx{font-size: 24px; color:black;line-height: 60px; padding-top: 70px;padding-bottom: 40px;}
 .col{color: #9900cc;font-weight: bold;}
 .rec{
     float: left;
@@ -114,7 +114,7 @@ body a { color: black; text-decoration: none; }
 .home_cont{
     width: 80%;
     height: 100%;
-    margin: 0px auto;
+    margin: 0 auto;
 }
 .home_cont_img{
     float: left;
@@ -170,5 +170,5 @@ body a { color: black; text-decoration: none; }
 .hig_yz{height: 250px;}
 .hig_jx{height: 350px;}
 .about_jx{width: 80%;margin: 50px auto;font-size: 14px;line-height: 26px;color: #666666;text-align: center;}
-.about_jx_con{width: 23%;text-align: center;float: left;padding: 5%;}
+.about_jx_con{width: 23%;text-align: center;float: left;padding:0 5%;}
 .bo_right{border-right: dashed 1px #666666;}
