--- a/static/css/style.css
+++ b/static/css/style.css
@@ -168,7 +168,7 @@ body a { color: black; text-decoration: none; }
 .about_fg{width: 80%;margin: 0 auto;border-top: dashed 1px #eeeeee;}
 .hig_story{height: 320px;}
 .hig_yz{height: 250px;}
-.hig_jx{height: 350px;}
+.hig_jx{height: 390px;}
 .about_jx{width: 80%;margin: 50px auto;font-size: 14px;line-height: 26px;color: #666666;text-align: center;}
 .about_jx_con{width: 23%;text-align: center;float: left;padding:0 5%;}
-.bo_right{border-right: dashed 1px #666666;}
+.bo_right{border-right: dashed 1px #acacac;}
