--- a/static/css/style.css
+++ b/static/css/style.css
@@ -171,4 +171,4 @@ body a { color: black; text-decoration: none; }
 .hig_jx{height: 390px;}
 .about_jx{width: 80%;margin: 50px auto;font-size: 14px;line-height: 26px;color: #666666;text-align: center;}
 .about_jx_con{width: 23%;text-align: center;float: left;padding:0 5%;}
-.bo_right{border: dotted 1px #cbcbcb;}
+.bo_right{border-right: dotted 1px #cbcbcb;}
