--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -37,15 +37,15 @@
         <div class="head_jx">我们的坚信</div>
         <div class="about_jx_con bo_right">
             <div class="col">消费升级</div>
-            消费升级和懒人经济的发展，消费者愿意为更好的体验，更便捷的服务买单。无需携带存放，随用随借，随借随还。
+            消费升级和懒人经济的发展，消费者愿意为更好的体验，更便捷的服务买单。共享物品无需携带存放，随用随借，随借随还。
         </div>
         <div class="about_jx_con bo_right">
-            <div class="col">消费升级</div>
-            消费升级和懒人经济的发展，消费者愿意为更好的体验，更便捷的服务买单。无需携带存放，随用随借，随借随还。
+            <div class="col">精神文化发展</div>
+            物品已不再是财富和地方的象征，更在乎的是物品使用而非占有，共享是最好的方式。共享是低碳和经济行为，且减少闲置。
         </div>
         <div class="about_jx_con">
-            <div class="col">消费升级</div>
-            消费升级和懒人经济的发展，消费者愿意为更好的体验，更便捷的服务买单。无需携带存放，随用随借，随借随还。
+            <div class="col">供给侧改革</div>
+            共享模式的便捷服务，激活用户潜在或压抑的需求，提高产品效率和价值。让制造业参与共享经济发展，促进产业的优化发展。
         </div>
     </div>
     </div>
