--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -34,7 +34,7 @@
     <div class="cont_big_gra hig_jx">
 
     <div class="about_jx">
-        <div class="head_jx">我们的坚信</div>
+        <div class="head_jx">我们坚信共享是未来</div>
         <div class="about_jx_con bo_right">
             <div class="col">消费升级</div>
             消费升级和懒人经济的发展，消费者愿意为更好的体验，更便捷的服务买单。共享物品无需携带存放，随用随借，随借随还。
