--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class="main_content_about">
-       <div class="about_sm">践行共享新模式 开创经济轻旅行</div>
+       <div class="about_slo">践行共享新模式 开创经济轻旅行</div>
     </div>
     <div class="cont_big hig_story">
         <div class="head3">源自有遗憾的出游</div>
