--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,9 +5,9 @@ body {margin:0 auto; padding:0 auto; height: 100%;}
 #logo{float: left; width:180px; height: 45px; margin-top: 0px;}
 #logo img{width:180px; height: 45px;}
 
-#navigation ul.menu { float:left; height: 50px; text-align: left; margin-left: 50px;}
+#navigation ul.menu { float:left; height: 50px; text-align: left; margin-left: 30px;}
 #navigation menu { margin-right: 80%; list-style: none; }
-#navigation .menu > li { display: block; float: left;width: 120px;text-align: right;margin-top: 3px;font-size: 16px; font-weight: bold;}
+#navigation .menu > li { display: block; float: left;width: 100px;text-align: right;font-size: 16px; }
 #navigation .menu > li a{color: black;text-decoration: none; color: white;}
 #navigation .menu > li a:hover{text-decoration: underline; }
 
