--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,7 +9,7 @@ body {margin:0 auto; padding:0 auto; height: 100%;}
 #navigation menu { margin-right: 80%; list-style: none; }
 #navigation .menu > li { display: block; float: left;width: 90px;text-align: right;font-size: 16px; }
 #navigation .menu > li a{color: black;text-decoration: none; color: white;}
-#navigation .menu > li a:hover{text-decoration: none; }
+#navigation .menu > li a:hover{text-decoration: none;font-weight: bold; }
 
 #navbar { height: 55px; }
 #navbar.row { margin-bottom: 0 }
