--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,7 @@ body {margin:0 auto; padding:0 auto; height: 100%;}
 #logo img{width:180px; height: 45px;}
 
 #navigation ul.menu { float:left; height: 50px; text-align: left; }
-#navigation menu { margin-right: 80%; list-style: none; }
+#navigation menu {list-style: none; }
 #navigation .menu > li { display: block; float: left;width: 90px;text-align: right;font-size: 16px; }
 #navigation .menu > li a{color: black;text-decoration: none; color: white;}
 #navigation .menu > li a:hover{text-decoration: none;font-weight: bold; }
