--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,7 @@ body {margin:0 auto; padding:0 auto; height: 100%;}
 #navigation .menu > li a{color: black;text-decoration: none; color: white;}
 #navigation .menu > li a:hover{text-decoration: none;font-weight: bold; }
 
-.star{float: right;width: 100px;height: 20px;font-size: 14px;border: 1px dashed #eeeeee;line-height: 20px;text-align: center;}
+.star{float: right;width: 80px;height: 26px;font-size: 14px;border: 1px dashed #eeeeee;line-height: 26px;text-align: center;margin-top: 12px;}
 .star a{text-decoration: none;color: white;}
 .star a:hover{text-decoration: none;font-weight: bold;}
 
