--- a/static/css/style.css
+++ b/static/css/style.css
@@ -73,11 +73,11 @@ h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 .zpg_right_sm{float: left;width: 100%;font-size: 14px;line-height: 22px;color: #666666;margin-top: -50px;font-weight: 100;}
 
 .jg_cont{width: 100%;height: 500px;margin: 50px auto;}
-.jg_img_cont{float: left;width: 45%;text-align: center;}
+.jg_img_cont{float: left;width: 45%;text-align: right;}
 .jg_img{width: auto;height: 500px;overflow: hidden;border: none;}
 .jg_sm_cont{float: left;width: 55%;text-align: left;}
-.jg_sm_cont_li{float: left;width: 100%;height: 120px;margin-bottom: 20px;}
-.jg_sm_imgt{float: left;width: 120px;height: 120px;margin-left: 30px;margin-right: 20px;border: none;}
+.jg_sm_cont_li{float: left;width: 100%;height: 120px;margin-bottom: 30px;}
+.jg_sm_imgt{float: left;width: 120px;height: 120px;margin-left: 40px;margin-right: 20px;border: none;}
 .jg_sm_img{width: 120px;height: 120px;border: none;overflow: hidden;}
 .jg_sm_text{float: left;font-size: 14px;line-height: 22px;color: #666666;font-weight: 100;}
 .jg_title{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold;width: 300px;}
