--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,7 @@ body {margin:0 auto; padding:0 auto; height: 100%;}
 .cp_slogn{width: 80%;color: white;text-align: left;margin: 100px auto;}
 
 
-.wm_content{ width:100%;height: 400px;background-size:100% 100%; background: url("/static/images/about/wm_bg.jpg") center no-repeat;background-color: #cc3399; }
+.wm_content{ width:100%;height: 400px;background-size:100% 100%; background: url("/static/images/about/wm_bg.jpg") center no-repeat;background-color: #b21d70; }
 .wm_slogn{width: 80%;color: white;text-align: center;margin: 100px auto;}
 
 .head_top{width: 80%; height: 50px; margin: 0 auto; padding-top: 10px;}
