--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -26,7 +26,7 @@
         </div>
           <div class="star"><a href="#" title="立即体验">立即体验</a></div>
 </div>
-        <div class="home_slogn">
+        <div class="wm_slogn">
             <h1>轻生活 轻旅行 嗨自拍</h1>
             <h4>随处可用的自拍神器，助你留影记录美丽、签到分享精彩</h4>
         </div>
