--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,9 +87,9 @@ h7{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold;margin-bo
 
 .qy_cont_left{float: left;width: 60%;height: 400px;text-align: left;font-size: 14px;line-height: 28px;color: #666666;}
 .qy_cont_right{float: left;width: 40%;height: 400px;text-align: right;}
-.qy_img_bg{float: left;width: 120px;height: 120px;margin: 20px;}
+.qy_img_bg{float: left;width: 120px;height: 120px;margin: 30px;}
 .qy_bg1{background-size:100% 100%; background: url("/static/images/about/qy_shouduan.jpg") center no-repeat;}
-.qy_img_text{width: 100%;height: 20px;background-color: white; background-color:rgba(0,0,0,0.5);text-align: center;font-size: 14px;color: #666666;}
+.qy_img_text{width: 100%;height: 20px; background-color:rgba(255,255,255,0.5);text-align: center;font-size: 14px;color: #333333;margin-bottom: 10px;}
 
 
 
