--- a/static/css/style.css
+++ b/static/css/style.css
@@ -89,6 +89,9 @@ h7{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold;margin-bo
 .qy_cont_right{float: left;width: 40%;height: 400px;text-align: right;}
 .qy_img_bg{float: left;width: 120px;height: 120px;margin: 30px;}
 .qy_bg1{background-size:100% 100%; background: url("/static/images/about/qy_shouduan.jpg") center no-repeat;}
+.qy_bg2{background-size:100% 100%; background: url("/static/images/about/qy_datou.jpg") center no-repeat;}
+.qy_bg3{background-size:100% 100%; background: url("/static/images/about/qy_beijing.jpg") center no-repeat;}
+.qy_bg4{background-size:100% 100%; background: url("/static/images/about/qy_sheying.jpg") center no-repeat;}
 .qy_img_text{width: 100%;height: 30px;line-height: 30px; background-color:rgba(255,255,255,0.5);text-align: center;font-size: 14px;color: #333333;margin-top: 80px;}
 
 
