--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -49,6 +49,15 @@
               <div class="qy_img_bg qy_bg1">
                   <div class="qy_img_text">手不够长</div>
               </div>
+              <div class="qy_img_bg qy_bg2">
+                  <div class="qy_img_text">总拍大头照</div>
+              </div>
+              <div class="qy_img_bg qy_bg3">
+                  <div class="qy_img_text">拍不全背景</div>
+              </div>
+              <div class="qy_img_bg qy_bg4">
+                  <div class="qy_img_text">牺牲为摄影师</div>
+              </div>
           </div>
        </div>
 
