--- a/static/css/style.css
+++ b/static/css/style.css
@@ -86,8 +86,8 @@ h7{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold;margin-bo
 .jg_title{font-size: 16px;line-height: 40px; color: #cc3399;font-weight: bold;width: 300px;}
 
 .qy_cont_left{float: left;width: 60%;height: 400px;text-align: left;font-size: 14px;line-height: 28px;color: #666666;}
-.qy_cont_right{float: left;width: 40%;height: 400px;text-right: right;padding-top: 40px;}
-.qy_img_bg{float: left;width: 130px;height: 130px;margin: 5px;}
+.qy_cont_right{float: left;width: 40%;height: 400px;text-right: right;padding-top: 30px;}
+.qy_img_bg{float: right;width: 130px;height: 130px;margin: 5px;}
 .qy_bg1{background-size:100% 100%; background: url("/static/images/about/qy_shouduan.jpg") center no-repeat;}
 .qy_bg2{background-size:100% 100%; background: url("/static/images/about/qy_datou.jpg") center no-repeat;}
 .qy_bg3{background-size:100% 100%; background: url("/static/images/about/qy_beijing.jpg") center no-repeat;}
